# reapergpt

./: .env.example  .gitignore  Makefile  README.md  TODO.md  pyproject.toml  reaper_actions.html  structure.txt
companion/: config.py  logging_conf.py  main.py  session_builder.py
companion/api/: routes.py
companion/llm/: planner.py
companion/memory/: store.py
companion/models/: actions.py  envelope.py  schemas.py  session_builder_plan.py
companion/planner/: __init__.py  base.py  compiler.py  heuristic.py  llm_stub.py  session.py
companion/services/: __init__.py  action_dispatcher.py
companion/storage/: plan_repository.py
data/: reaper_actions.json
data/pytest_bridge/: expired_plan_3fd89f97cdc84a68a89aafd4f7976caf.db  plan_clarify_fx_answered_0db20c5eb4ab4ea889ef9b18e9cea2d9.db  plan_create_bus_generic_18083a924970439da69dcf6c4195c470.db  plan_create_track_bus_ee659ebc033c442ebaef4a09673c2190.db  plan_create_track_generic_3dede36e3a204035b635524c707e1654.db  plan_fx_insert_38d65b5f117d43f2866d741d080b9e05.db  plan_id_7d08c806ccfc45c1a9b345abe4946876.db  (+14 more)
docs/: next_level_roadmap.txt  next_milestone_tasks.txt  session_builder_live_validation.md
reaper_bridge/: README.md  reapergpt_bridge.lua  reapergpt_file_bridge.lua  reapergpt_panel.lua  reapergpt_setup_autostart.lua  reapergpt_startup_launcher.lua
scripts/: run_dev.ps1  run_dev.sh  run_dev_file.ps1
tests/: test_actions_validation.py  test_api_health.py  test_api_prompt.py  test_plan_api.py  test_plan_repository.py  test_prompt_planner.py  test_reaper_client_stub.py  test_session_builder_prompt.py
(+12 files in other folders)
